--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,20 @@
                <groupId>org.springframework.ws</groupId>
                <artifactId>spring-ws-core</artifactId>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
+		<dependency>
+		    <groupId>com.sun.xml.bind</groupId>
+		    <artifactId>jaxb-impl</artifactId>
+		    <version>2.3.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-core -->
+		<dependency>
+		    <groupId>com.sun.xml.bind</groupId>
+		    <artifactId>jaxb-core</artifactId>
+		    <version>2.3.0</version>
+		</dependency>
+				
 	</dependencies>
 
 	<build>
@@ -55,9 +69,41 @@
 			</plugin>
 			
 			<plugin>
-			    <groupId>org.jvnet.jaxb2.maven2</groupId>
-			    <artifactId>maven-jaxb2-plugin</artifactId>
-			    <version>0.13.0</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jaxb2-maven-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>xjc</id>
+						<goals>
+							<goal>xjc</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<packageName>xmlws.firma.wsgenerated</packageName>
+					<wsdl>true</wsdl>
+					<xmlschema>false</xmlschema>
+					<schemaDirectory>${project.basedir}/wsdls</schemaDirectory>
+					<outputDirectory>${project.basedir}/src/main/java</outputDirectory>
+					<clearOutputDir>false</clearOutputDir>
+					<schemaFiles>tests.wsdl</schemaFiles>
+				</configuration>
+			</plugin>
+			
+<!-- 			<plugin> -->
+<!-- 			    <groupId>org.jvnet.jaxb2.maven2</groupId> -->
+<!-- 			    <artifactId>maven-jaxb2-plugin</artifactId> -->
+<!-- 			    <version>0.13.2</version> -->
 <!-- 			    <executions> -->
 <!-- 			        <execution> -->
 <!-- 			            <goals> -->
@@ -65,16 +111,16 @@
 <!-- 			            </goals> -->
 <!-- 			        </execution> -->
 <!-- 			    </executions> -->
-			    <configuration>
-			        <schemaLanguage>WSDL</schemaLanguage>
-			        <generatePackage>xmlws.firma.webservices.test</generatePackage>
-			        <schemas>
-			            <schema>
-			                <url>wsdls/tests.wsdl.xml</url>
-			            </schema>
-			        </schemas>
-			    </configuration>
-			</plugin>
+<!-- 			    <configuration> -->
+<!-- 			        <schemaLanguage>WSDL</schemaLanguage> -->
+<!-- 			        <generatePackage>xmlws.firma.webservices.test</generatePackage> -->
+<!-- 			        <schemas> -->
+<!-- 			            <schema> -->
+<!-- 			                <url>wsdls/tests.wsdl</url> -->
+<!-- 			            </schema> -->
+<!-- 			        </schemas> -->
+<!-- 			    </configuration> -->
+<!-- 			</plugin> -->
 		</plugins>
 	</build>
 
